# MAVRIK_Tilt_Wing_VTOL_JAX

./: .gitignore  README.md  launch.json  pyproject.toml
Mavrik/: BechamoNasaOpenModels.slx  Mavrik_Reference_model.slx  Mavrik_Reference_model.slx.autosave  Mavrik_Reference_model.slxc  README.md  openLoopMavrikReferenceModel.m  setupMavrik.m
Mavrik/slprj/_jitprj/: s0VVaCIUQ84E2auqj7iboAD.l  s0VVaCIUQ84E2auqj7iboAD.mat  s0ej6kJj39zH11tBdX0V2SH.l  s0ej6kJj39zH11tBdX0V2SH.mat  s162GktcxaPwn3AkdDKqSqH.l  s162GktcxaPwn3AkdDKqSqH.mat  s1Oz073R5meCoJEX1ZrPtKB.l  s1Oz073R5meCoJEX1ZrPtKB.mat  s1i8pKe5PLDVz1k2e5lLVmB.l  s1i8pKe5PLDVz1k2e5lLVmB.mat  s1q7Yru0hKUtaj58rIst2lB.l  s1q7Yru0hKUtaj58rIst2lB.mat  s1vtaVSqvUNYqPFlf0sP62B.l  s1vtaVSqvUNYqPFlf0sP62B.mat  s1xJZftZK6VvkGXnNDMUGd.l  s1xJZftZK6VvkGXnNDMUGd.mat  s2CbFnK8Uwklq6kAbBP3spH.l  s2CbFnK8Uwklq6kAbBP3spH.mat  s5HQWhRlJhMRx8Ni8un8AWF.l  s5HQWhRlJhMRx8Ni8un8AWF.mat  s5n1PP3DRSWJ7p27qZiJAj.l  s5n1PP3DRSWJ7p27qZiJAj.mat  s5r3iDBVLUSZFGDxNzj75VE.l  s5r3iDBVLUSZFGDxNzj75VE.mat  s64axeEGUPkNQCYGoPPqM0F.l  s64axeEGUPkNQCYGoPPqM0F.mat  s6d3VCD77fvQcKLDdgX5dZB.l  s6d3VCD77fvQcKLDdgX5dZB.mat  s6sAhjApJJJs2aYfCXXnFx.l  s6sAhjApJJJs2aYfCXXnFx.mat  s7PVJAHCyqsgt5skVUwKDPH.l  s7PVJAHCyqsgt5skVUwKDPH.mat  s7TwEIW2C2gZutntcrWG6N.l  s7TwEIW2C2gZutntcrWG6N.mat  s8KSGhej4IU11dChJ7T9fJD.l  s8KSGhej4IU11dChJ7T9fJD.mat  s8N35jwWPI876nUhHA8ydEF.l  s8N35jwWPI876nUhHA8ydEF.mat  s95QMmepcVZJYiB7aLQwniB.l  s95QMmepcVZJYiB7aLQwniB.mat  (+198 more)
Mavrik/slprj/_sfprj/EMLReport/: s0VVaCIUQ84E2auqj7iboAD.mat  s0ej6kJj39zH11tBdX0V2SH.mat  s162GktcxaPwn3AkdDKqSqH.mat  s1Oz073R5meCoJEX1ZrPtKB.mat  (+115 more)
jax_mavrik/: mavrik.py  mavrik_setup.py  mavrik_types.py
jax_mavrik/examples/: gym_mavrik.py  pid.py  sac.py  system_id.py  trim.py
jax_mavrik/src/: actuator.py  mavrik_aero.py  mavrik_aero_parallel.py  simulator.py  sixdof.py
jax_mavrik/src/utils/: mat_tools.py
tests/: test_Cl.py  test_Cm.py  test_Cn.py  test_Ct.py  test_Cx.py  test_Cy.py  test_Cz.py  test_actuator.py  test_mavrik.py  test_mavrik_aero.py  test_overflow.py  test_sixdof.py
(+22 files in other folders)
