[tool.poetry]
name = "mavrik-jax"
version = "0.1.0"
description = "A JAX re-implementation of the MAVRIK Matlab simulator"
authors = ["zwc662 <zwc662@gmail.com>"]
readme = "README.md"
packages = [{include = "mavrik_jax"}]

[tool.poetry.dependencies]
python = "^3.10"
jax = "0.4.31"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
