[tool.poetry]
name = "jax-mavrik"
version = "0.1.0"
description = "A JAX re-implementation of the MAVRIK Matlab simulator"
authors = ["zwc662 <zwc662@gmail.com>"]
readme = "README.md"
packages = [{include = "jax_mavrik"}]

[tool.poetry.dependencies]
python = "^3.10"
jax = { version = "0.4.31", extras = ["cuda"] }
pytest = "^8.3.3"
diffrax = "^0.6.0"
pyarrow = "^18.0.0"
matplotlib = "^3.9.2"
pandas = "^2.2.3"
jaxtyping = "^0.2.34"
gym = "^0.26.2"
optax = "^0.2.4"
flax = "^0.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
