[tool.poetry]
name = "jax-mavrik"
version = "0.1.0"
description = "A JAX re-implementation of the MAVRIK Matlab simulator"
authors = ["zwc662 <zwc662@gmail.com>"]
readme = "README.md"
packages = [{include = "jax_mavrik"}]

[tool.poetry.dependencies]
python = "^3.10" 
pytest = "^8.3.3"
diffrax = "^0.6.0"
pyarrow = "^18.0.0"
matplotlib = "^3.9.2"
pandas = "^2.2.3"
jaxtyping = "^0.2.34"
gym = "^0.26.2"
optax = "^0.2.4"
flax = "^0.10.2"
scikit-learn = "^1.5.2"
jaxlib = {version = ">=0.4.23,<0.5.0", extras = ["cuda12.cudnn89"], source = "jaxlib"}
jax = {version = ">=0.4.23,<0.5.0", extras = ["cuda12_pip"], source = "jax"}


[[tool.poetry.source]]
name = "jaxlib"
url = "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"
priority = "explicit"


[[tool.poetry.source]]
name = "jax"
url = "https://storage.googleapis.com/jax-releases/jax_releases.html"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
